# apiclient-pydantic-generator

./: .flake8  .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: markdown.tpl
.github/workflows/: publish.yml  tests.yml
apiclient_pydantic_generator/: __main__.py  format.py  parser.py
apiclient_pydantic_generator/templates/: __init__.jinja2  client.jinja2  endpoints.jinja2
tests/: conftest.py  test_format.py  test_parser.py
tests/resources/: openapi.json
